cadastro-doadores/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doadores-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Adição crítica para Minikube
  rules:
    - host: k8s.local  # Substitua pela variável do Helm se necessário
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: 
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port: 
                  number: 5000
